--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,6 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .dark {
+    --primary-bkg: 9 9 10;
+    --secondary-bkg: 12 12 14;
+  }
+
+  .light {
+    --primary-bkg: 230 233 235;
+    --secondary-bkg: 245 246 247;
+  }
+}
 
 * {
   /* Disable Selecing */
@@ -8,6 +22,14 @@
   -webkit-user-select: none; /* For Safari */
   -moz-user-select: none; /* For Firefox */
   -ms-user-select: none; /* For IE/Edge */
+
+  /* Disable dragging */
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+
+  /* Set font to poppins */
+  font-family: "Poppins", sans-serif;
 }
 
 p,
