--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -41,3 +41,85 @@ h5,
 h6 {
   cursor: default;
 }
+
+.no-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
+/* Markdown styles for Blog posts & Text Editor */
+.markdown hr {
+  height: 1px;
+  margin: 1em 0;
+  padding: 0;
+  @apply border-t border-gray-300 dark:border-gray-700;
+}
+
+.markdown blockquote {
+  @apply p-4 my-2 pl-10 border-l-4 border-gray-400 dark:border-gray-600 text-gray-500 dark:text-slate-300 italic;
+}
+
+.markdown h1 {
+  @apply !text-3xl !font-bold;
+}
+
+.markdown h2 {
+  @apply !text-2xl !font-bold;
+}
+
+.markdown h3 {
+  @apply !text-xl !font-bold;
+}
+
+.markdown h4 {
+  @apply !text-lg !font-bold;
+}
+
+.markdown h5 {
+  @apply !font-bold;
+}
+
+.markdown h6 {
+  @apply !text-sm !font-bold;
+}
+
+.markdown mark {
+  @apply bg-primary/40 dark:bg-primary/30;
+}
+
+.markdown ol {
+  @apply list-decimal px-5;
+}
+
+.markdown ul {
+  @apply list-disc px-5;
+}
+
+/* Custom classes */
+.animate-float {
+  animation: float 5s infinite;
+}
+
+.animate-float-reverse {
+  animation: float 5s infinite;
+  animation-direction: reverse;
+  animation-delay: 2.5s;
+}
+
+.highlight {
+  @apply w-full px-1;
+}
+
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
